--- a/sample-react/src/index.css
+++ b/sample-react/src/index.css
@@ -1,8 +1,7 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Open sans', -apple-system, BlinkMacSystemFont, 'Helvetica Neue',
+    'Yu Gothic', YuGothic, Verdana, Meiryo, 'M+ 1p', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
