change name from normal todefault

--- a/src/_font-family/_default.scss
+++ b/src/_font-family/_default.scss
@@ -1,5 +1,5 @@
 body {
-  //  normal
+  //  default
   font-family: 'Open sans', -apple-system, BlinkMacSystemFont, 'Helvetica Neue',
     'Yu Gothic', YuGothic, Verdana, Meiryo, 'M+ 1p', sans-serif;
 }
