--- a/src/atom/_buttons.scss
+++ b/src/atom/_buttons.scss
@@ -1,4 +1,4 @@
-// src/styles/buttons.scss
+// src/styles/atom/buttons.scss
 $button-padding: 10px 20px;
 $button-bg-color: #007bff;
 $button-text-color: #ffffff;
