change some font css

--- a/src/token/_font-family/_ja.scss
+++ b/src/token/_font-family/_ja.scss
@@ -1,7 +1,6 @@
 body {
   //  japanese: ja
-  font-family: 'ヒラギノ角ゴシック', 'Hiragino Kaku Gothic',
-    'ヒラギノ角ゴ Pro W3', 'Open Sans', -apple-system, BlinkMacSystemFont,
-    'Helvetica Neue', 'Yu Gothic', YuGothic, Verdana, Meiryo, 'M+ 1p',
-    sans-serif;
+  font-family: 'Noto Sans JP', 'ヒラギノ角ゴシック', 'Hiragino Kaku Gothic',
+    'ヒラギノ角ゴ Pro W3', -apple-system, BlinkMacSystemFont, 'Helvetica Neue',
+    'Yu Gothic', YuGothic, Verdana, Meiryo, 'M+ 1p', sans-serif;
 }
